# DARIS

./: ._migrate_default_workspace.py  .env.example  .gitignore  README.md  _run_electricity_workflow.py  openclaw_main.py  openclaw_requirements.txt  remote_branch_check.txt  requirements.txt  重建电力预测工作区.md
1_config/alert/: dingtalk_config.yaml
1_config/base/: benchmark_projects.json  cost_config.yaml  openclaw_config.yaml
2_agent_system/: base_agent.py  dingtalk_callback.py
2_agent_system/1_research_manager/: __init__.py  run.py
2_agent_system/2_literature_agent/: agent.py
2_agent_system/3_literature_summary_agent/: agent.py
2_agent_system/4_innovation_agent/: agent.py
2_agent_system/5_innovation_review_agent/: agent.py
2_agent_system/6_code_implementation_agent/: __init__.py  agent.py
4_research_hypothesis/: innovation_round1.md
backup_20260407/: aliyun_connector.py  dingtalk_callback.py  openclaw_main.py  workspace_context.py
backup_electricity_business/: 工程化工作流.md
code/: DEPLOY_GUIDE.md  README_文献爬取模块使用说明.md  aliyun_check.ps1  aliyun_setup.sh  deploy_to_aliyun.sh  dynamic_mtg nn_model.py  install_chromedriver.ps1  run_crawler.py  run_literature.py  run_literature_download.py  sync_to_aliyun.py  test_model.py  test_school_connection.py
config/: program.md  search_rules.yaml
docs/: ~$sdorqin.docx
scripts/: archive_workspace.py  delete_workspace.py  init_workspace.py  switch_workspace.py
workspaces/: workspace_index.json
workspaces/workspace_electricity_forecast/code/benchmark_projects/aris/demo/agentcore/: pyproject.toml  tasks.py
(+626 files in other folders)
